[tool.poetry]
name = "leave-system"
version = "0.1.0"
description = "Simple leave management system built with FastAPI"
authors = ["AI Assistant <assistant@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
